# pir_core

pir_control/: CMakeLists.txt  package.xml
pir_control/launch/: pir_control.launch  pir_control2.launch  pir_server.launch
pir_control/motion/: README.md  acc.mts  dcc.mts  sample.mts  smallsmall.mts
pir_control/msg/: Motor.msg
pir_control/scripts/: controller.py  controller2.py  detect_obs.py  motor_server.py  view_filter_lidar.py
pir_control/src/: mimic_spt_to_cmd.cpp
pir_control/srv/: AddMotor.srv
pir_core/: CMakeLists.txt  package.xml
pir_description/: CMakeLists.txt  package.xml
pir_description/launch/: pir_robot_frame.launch
pir_description/meshes/base/: ._urdf_frame.stl
pir_description/meshes/wheels/: ._right_tire.stl  left_tire.stl
pir_description/rviz/: pir_robot_frame.rviz
pir_description/urdf/: pir_robot_frame.gazebo.xacro  pir_robot_frame.urdf.xacro
pir_gazebo/: CMakeLists.txt  package.xml
pir_gazebo/launch/: pir_empty.launch  pir_with_actor.launch
pir_gazebo/models/simplerooml/: model.config  model.sdf
pir_gazebo/rviz/: robotmodel.rviz
pir_gazebo/worlds/: test_world_with_actor.world
