<?xml version="1.0"?>
<package format="2">
  <name>pir_core</name>
  <version>0.0.0</version>
  <description>The pir_core package</description>

  <maintainer email="miki.aislab@gmail.com">miki</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>pir_description</exec_depend>
  <exec_depend>pir_gazebo</exec_depend>
  <exec_depend>pir_control</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
